sif_macro/tests/ok/import_rename.rs
use sif_macro::parameterized as pm;

#[pm]
#[case(())]
fn my_test(v: ()) {
    assert_eq!(v, ());
}

fn main() {}
