sif_macro/tests/fail/not_a_fn.rs
use sif_macro::parameterized;

#[parameterized]
struct A;

fn main() {}
